# Bachelor_prosjekt

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_SUMMARY.md  KODE_STATUS.md  LICENSE  PRESENTASJON_OG_LÆRINGSGUIDE.md  README.md  SECURITY_REVIEW.md  Statusrapport_Autonomia_Uke4-19_Komplett.md  fetch_debug.py  pyproject.toml  requirements.txt  test1.md
.clinerules/: orchestrator.md
Autonomia___Final_Report/: README.md  ReportStyle.sty  main.tex  makefile  references.bib
Autonomia___Final_Report(2)/: README.md  ReportStyle.sty  main.tex  makefile  references.bib
Autonomia___Final_Report(2)/src/: abstract.tex  acknowledgements.tex  acronyms.tex  cover_page.tex  glossaries.tex  table_of_contents.tex  title_page.tex
Autonomia___Final_Report/src/: abstract.tex  acknowledgements.tex  acronyms.tex  (+4 more)
debug_out/: results.json
docs/: architecture.md  calibration.md  fordeling_av_arbeid.md  hardware.md  performance.md  pi-setup.md  troubleshooting.md  u_kodeforklaring.md  vision-history.md
firmware/: motor_controller.ino
models/: ball_color_classifier.pkl
src/: comms_manager.py  config.py  kinematics.py  main.py  main_rpi.py  requirements.txt
tests/: conftest.py  end_to_end_test.py  lighting_test_protocol.md  test_adaptive_grip.py  test_arm_config.py  test_bin_calibration_route_tool.py  test_ik_solver.py  test_main_m3_thermal.py  test_simulation_route_demo.py  test_touch_calibration_auto_detect.py  test_touch_calibration_safety.py  test_vision_detector_red_orange_glare.py  test_vision_scan_pose.py
tmp/: chapter9_fitz_text.txt
venv_train/: pyvenv.cfg
(+219 files in other folders)
