[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomia"
version = "1.0.0"
description = "Autonomous ball-sorting robot arm — Bachelor thesis project"
requires-python = ">=3.9"
dependencies = [
    "depthai==3.5.0",
    "opencv-python==4.13.0.92",
    "numpy==2.0.2",
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    "pyserial==3.5",
    "requests==2.32.5",
    "matplotlib==3.9.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
